--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,3 +17,6 @@
 @import './components/_Skills';
 @import './components/_Contact';
 
+.portfolio {
+    overflow: hidden;
+}
